done analytic grad for SVM with reg

--- a/assignment1/svm.ipynb
+++ b/assignment1/svm.ipynb
@@ -335,23 +335,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 47,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical: 25.459431 analytic: 25.459431, relative error: 7.602224e-12\n",
-      "numerical: -5.458809 analytic: -5.458809, relative error: 1.160298e-10\n",
-      "numerical: 9.659369 analytic: 9.659369, relative error: 5.429571e-11\n",
-      "numerical: -4.876227 analytic: -4.876227, relative error: 5.365616e-11\n",
-      "numerical: 16.469578 analytic: 16.469578, relative error: 1.667683e-12\n",
-      "numerical: -7.101025 analytic: -7.101025, relative error: 1.183208e-11\n",
-      "numerical: 43.827061 analytic: 43.827061, relative error: 1.134059e-12\n",
-      "numerical: -11.518391 analytic: -11.518391, relative error: 8.079851e-12\n",
-      "numerical: 23.998230 analytic: 23.998230, relative error: 1.626079e-12\n",
-      "numerical: 18.936376 analytic: 18.936376, relative error: 7.558841e-12\n"
+      "numerical: 38.985159 analytic: 38.985159, relative error: 1.015953e-11\n",
+      "numerical: 1.756510 analytic: 1.756510, relative error: 8.028407e-11\n",
+      "numerical: -51.413709 analytic: -51.413709, relative error: 1.577288e-12\n",
+      "numerical: -16.524744 analytic: -16.524744, relative error: 2.264388e-11\n",
+      "numerical: 11.404981 analytic: 11.404981, relative error: 1.418705e-11\n",
+      "numerical: 15.655138 analytic: 15.655138, relative error: 3.004348e-12\n",
+      "numerical: 18.390517 analytic: 18.390517, relative error: 2.222644e-11\n",
+      "numerical: -3.492821 analytic: -3.492821, relative error: 1.308306e-10\n",
+      "numerical: 9.763901 analytic: 9.763901, relative error: 4.966982e-11\n",
+      "numerical: 25.703280 analytic: 25.703280, relative error: 1.729647e-11\n",
+      "numerical: 7.816274 analytic: 7.806878, relative error: 6.014213e-04\n",
+      "numerical: -24.678417 analytic: -24.681069, relative error: 5.373588e-05\n",
+      "numerical: -30.377139 analytic: -30.373871, relative error: 5.378424e-05\n",
+      "numerical: 11.909132 analytic: 11.908534, relative error: 2.511837e-05\n",
+      "numerical: -12.014643 analytic: -12.012441, relative error: 9.164208e-05\n",
+      "numerical: -3.456934 analytic: -3.443822, relative error: 1.900027e-03\n",
+      "numerical: 5.707793 analytic: 5.700179, relative error: 6.674768e-04\n",
+      "numerical: -14.465363 analytic: -14.475340, relative error: 3.447593e-04\n",
+      "numerical: -2.676635 analytic: -2.681099, relative error: 8.332896e-04\n",
+      "numerical: 9.754267 analytic: 9.741871, relative error: 6.358098e-04\n"
      ]
     }
    ],
@@ -371,9 +383,9 @@
     "\n",
     "# do the gradient check once again with regularization turned on\n",
     "# you didn't forget the regularization gradient did you?\n",
-    "# loss, grad = svm_loss_naive(W, X_dev, y_dev, 1e2)\n",
-    "# f = lambda w: svm_loss_naive(w, X_dev, y_dev, 1e2)[0]\n",
-    "# grad_numerical = grad_check_sparse(f, W, grad)"
+    "loss, grad = svm_loss_naive(W, X_dev, y_dev, 1e2)\n",
+    "f = lambda w: svm_loss_naive(w, X_dev, y_dev, 1e2)[0]\n",
+    "grad_numerical = grad_check_sparse(f, W, grad)"
    ]
   },
   {
