done LinearSVM predict method

--- a/cs231-psets/pset1/svm.ipynb
+++ b/cs231-psets/pset1/svm.ipynb
@@ -539,25 +539,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training accuracy: 0.000000\n",
-      "validation accuracy: 0.000000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/local/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel_launcher.py:4: DeprecationWarning: elementwise == comparison failed; this will raise an error in the future.\n",
-      "  after removing the cwd from sys.path.\n",
-      "/opt/local/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel_launcher.py:6: DeprecationWarning: elementwise == comparison failed; this will raise an error in the future.\n",
-      "  \n"
+      "X (49000, 3073) W (3073, 10) y_pred (49000,)\n",
+      "training accuracy: 0.369980\n",
+      "X (1000, 3073) W (3073, 10) y_pred (1000,)\n",
+      "validation accuracy: 0.378000\n"
      ]
     }
    ],
