done with vectorized sum

--- a/cs231-psets/pset1/softmax.ipynb
+++ b/cs231-psets/pset1/softmax.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {
     "scrolled": false
    },
@@ -182,16 +182,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical: 1.021235 analytic: 0.852891, relative error: 8.982499e-02\n",
-      "numerical: 2.450827 analytic: 2.009076, relative error: 9.904943e-02\n",
-      "numerical: -1.508468 analytic: -1.202896, relative error: 1.127005e-01\n",
-      "numerical: -0.238743 analytic: -0.866329, relative error: 5.679149e-01\n",
-      "numerical: 1.246152 analytic: 1.111538, relative error: 5.709554e-02\n",
-      "numerical: 1.334754 analytic: 1.112206, relative error: 9.094879e-02\n",
-      "numerical: 0.384105 analytic: 0.821229, relative error: 3.626583e-01\n",
-      "numerical: 2.288106 analytic: 1.526611, relative error: 1.996204e-01\n",
-      "numerical: -0.556350 analytic: -0.291312, relative error: 3.126698e-01\n",
-      "numerical: 1.209558 analytic: 0.404585, relative error: 4.986997e-01\n"
+      "numerical: -0.881480 analytic: -0.881480, relative error: 1.112806e-08\n",
+      "numerical: -2.707545 analytic: -2.707545, relative error: 2.863085e-11\n",
+      "numerical: -0.556650 analytic: -0.556650, relative error: 2.712578e-08\n",
+      "numerical: 1.914229 analytic: 1.914229, relative error: 1.303228e-08\n",
+      "numerical: -0.497289 analytic: -0.497289, relative error: 3.007834e-08\n",
+      "numerical: 1.721625 analytic: 1.721625, relative error: 1.299777e-08\n",
+      "numerical: 0.630781 analytic: 0.630781, relative error: 7.969961e-08\n",
+      "numerical: 0.797970 analytic: 0.797970, relative error: 7.862757e-08\n",
+      "numerical: 0.384042 analytic: 0.384042, relative error: 3.457368e-08\n",
+      "numerical: -0.070833 analytic: -0.070833, relative error: 1.686920e-07\n",
+      "numerical: -1.864059 analytic: -1.864059, relative error: 1.536258e-08\n",
+      "numerical: -0.725982 analytic: -0.725982, relative error: 4.086366e-09\n",
+      "numerical: 1.118905 analytic: 1.118905, relative error: 6.067293e-08\n",
+      "numerical: -0.689110 analytic: -0.689110, relative error: 3.897977e-08\n",
+      "numerical: 0.565462 analytic: 0.565462, relative error: 4.978417e-08\n",
+      "numerical: -0.798724 analytic: -0.798724, relative error: 3.738623e-09\n",
+      "numerical: 1.927131 analytic: 1.927131, relative error: 2.075654e-11\n",
+      "numerical: 0.082665 analytic: 0.082665, relative error: 1.198305e-07\n",
+      "numerical: 1.597721 analytic: 1.597721, relative error: 2.584512e-08\n",
+      "numerical: 0.632769 analytic: 0.632768, relative error: 7.654451e-09\n"
      ]
     }
    ],
@@ -207,16 +217,28 @@
     "grad_numerical = grad_check_sparse(f, W, grad, 10)\n",
     "\n",
     "# similar to SVM case, do another gradient check with regularization\n",
-    "# loss, grad = softmax_loss_naive(W, X_dev, y_dev, 1e2)\n",
-    "# f = lambda w: softmax_loss_naive(w, X_dev, y_dev, 1e2)[0]\n",
-    "# grad_numerical = grad_check_sparse(f, W, grad, 10)"
+    "loss, grad = softmax_loss_naive(W, X_dev, y_dev, 1e2)\n",
+    "f = lambda w: softmax_loss_naive(w, X_dev, y_dev, 1e2)[0]\n",
+    "grad_numerical = grad_check_sparse(f, W, grad, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "naive loss: 2.330426e+00 computed in 0.111844s\n",
+      "denom.shape = (500, 1)\n",
+      "vectorized loss: 1.165213e+03 computed in 0.008062s\n",
+      "Loss difference: 1162.882328\n",
+      "Gradient difference: 320.294534\n"
+     ]
+    }
+   ],
    "source": [
     "# Now that we have a naive implementation of the softmax loss function and its gradient,\n",
     "# implement a vectorized version in softmax_loss_vectorized.\n",
