done affine_backward

--- a/cs231-psets/pset2/FullyConnectedNets.ipynb
+++ b/cs231-psets/pset2/FullyConnectedNets.ipynb
@@ -48,16 +48,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "run the following from the cs231n directory and try again:\n",
-      "python setup.py build_ext --inplace\n",
-      "You may also need to restart your iPython kernel\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -89,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -173,9 +172,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " dx shape: (10, 2, 3) x shape: (10, 2, 3)\n",
+      "dw shape: (6, 5) w shape: (6, 5)\n",
+      "db shape: (5,) b shape: (5,)\n",
+      "Testing affine_backward function:\n",
+      "dx error:  2.03610076859e-09\n",
+      "dw error:  4.13379874219e-10\n",
+      "db error:  2.81627425224e-11\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the affine_backward function\n",
     "\n",
@@ -190,6 +203,9 @@
     "\n",
     "_, cache = affine_forward(x, w, b)\n",
     "dx, dw, db = affine_backward(dout, cache)\n",
+    "print 'dx shape:', dx.shape, 'x shape:', x.shape\n",
+    "print 'dw shape:', dw.shape, 'w shape:', w.shape\n",
+    "print 'db shape:', db.shape, 'b shape:', b.shape\n",
     "\n",
     "# The error should be around 1e-10\n",
     "print 'Testing affine_backward function:'\n",
