--- a/cs231-psets/pset2/FullyConnectedNets.ipynb
+++ b/cs231-psets/pset2/FullyConnectedNets.ipynb
@@ -172,20 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " dx shape: (10, 2, 3) x shape: (10, 2, 3)\n",
+      "dx shape: (10, 2, 3) x shape: (10, 2, 3)\n",
       "dw shape: (6, 5) w shape: (6, 5)\n",
       "db shape: (5,) b shape: (5,)\n",
       "Testing affine_backward function:\n",
-      "dx error:  2.03610076859e-09\n",
-      "dw error:  4.13379874219e-10\n",
-      "db error:  2.81627425224e-11\n"
+      "dx error:  1.72528190543e-09\n",
+      "dw error:  8.36382798824e-11\n",
+      "db error:  2.59803659324e-10\n"
      ]
     }
    ],
@@ -224,15 +224,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.          0.          0.          0.        ]\n",
+      " [ 0.          0.          0.04545455  0.13636364]\n",
+      " [ 0.22727273  0.31818182  0.40909091  0.5       ]]\n",
+      "Testing relu_forward function:\n",
+      "difference:  4.99999979802e-08\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the relu_forward function\n",
     "\n",
     "x = np.linspace(-0.5, 0.5, num=12).reshape(3, 4)\n",
     "\n",
     "out, _ = relu_forward(x)\n",
+    "print out\n",
     "correct_out = np.array([[ 0.,          0.,          0.,          0.,        ],\n",
     "                        [ 0.,          0.,          0.04545455,  0.13636364,],\n",
     "                        [ 0.22727273,  0.31818182,  0.40909091,  0.5,       ]])\n",
