done with svm_loss

--- a/cs231-psets/pset2/FullyConnectedNets.ipynb
+++ b/cs231-psets/pset2/FullyConnectedNets.ipynb
@@ -48,15 +48,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "run the following from the cs231n directory and try again:\n",
+      "python setup.py build_ext --inplace\n",
+      "You may also need to restart your iPython kernel\n"
      ]
     }
    ],
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,9 +184,9 @@
       "dw shape: (6, 5) w shape: (6, 5)\n",
       "db shape: (5,) b shape: (5,)\n",
       "Testing affine_backward function:\n",
-      "dx error:  1.72528190543e-09\n",
-      "dw error:  8.36382798824e-11\n",
-      "db error:  2.59803659324e-10\n"
+      "dx error:  2.92811041032e-10\n",
+      "dw error:  7.72230354962e-11\n",
+      "db error:  1.45272151192e-11\n"
      ]
     }
    ],
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +274,7 @@
      "output_type": "stream",
      "text": [
       "Testing relu_backward function:\n",
-      "dx error:  3.27563238996e-12\n"
+      "dx error:  3.27562091007e-12\n"
      ]
     }
    ],
@@ -303,9 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing affine_relu_forward:\n",
+      "dx error:  4.48032054675e-11\n",
+      "dw error:  8.29296692956e-10\n",
+      "db error:  7.82666949237e-12\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.layer_utils import affine_relu_forward, affine_relu_backward\n",
     "\n",
@@ -339,29 +351,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.99984006821 8.99984006821\n",
+      "-882.0\n"
+     ]
+    }
+   ],
    "source": [
     "num_classes, num_inputs = 10, 50\n",
     "x = 0.001 * np.random.randn(num_inputs, num_classes)\n",
     "y = np.random.randint(num_classes, size=num_inputs)\n",
     "\n",
-    "dx_num = eval_numerical_gradient(lambda x: svm_loss(x, y)[0], x, verbose=False)\n",
+    "# dx_num = eval_numerical_gradient(lambda x: svm_loss(x, y)[0], x, verbose=False)\n",
     "loss, dx = svm_loss(x, y)\n",
+    "loss2, dx2 = svm_loss2(x, y)\n",
+    "print loss, loss2\n",
+    "print np.sum(np.abs(dx) - np.abs(dx2))\n",
     "\n",
-    "# Test svm_loss function. Loss should be around 9 and dx error should be 1e-9\n",
-    "print 'Testing svm_loss:'\n",
-    "print 'loss: ', loss\n",
-    "print 'dx error: ', rel_error(dx_num, dx)\n",
     "\n",
-    "dx_num = eval_numerical_gradient(lambda x: softmax_loss(x, y)[0], x, verbose=False)\n",
-    "loss, dx = softmax_loss(x, y)\n",
+    "# # Test svm_loss function. Loss should be around 9 and dx error should be 1e-9\n",
+    "# print 'Testing svm_loss:'\n",
+    "# print 'loss: ', loss\n",
+    "# print 'dx error: ', rel_error(dx_num, dx)\n",
     "\n",
-    "# Test softmax_loss function. Loss should be 2.3 and dx error should be 1e-8\n",
-    "print '\\nTesting softmax_loss:'\n",
-    "print 'loss: ', loss\n",
-    "print 'dx error: ', rel_error(dx_num, dx)"
+    "# dx_num = eval_numerical_gradient(lambda x: softmax_loss(x, y)[0], x, verbose=False)\n",
+    "# loss, dx = softmax_loss(x, y)\n",
+    "\n",
+    "# # Test softmax_loss function. Loss should be 2.3 and dx error should be 1e-8\n",
+    "# print '\\nTesting softmax_loss:'\n",
+    "# print 'loss: ', loss\n",
+    "# print 'dx error: ', rel_error(dx_num, dx)"
    ]
   },
   {
