done parameter init for TwoLayerNet

--- a/cs231-psets/pset2/FullyConnectedNets.ipynb
+++ b/cs231-psets/pset2/FullyConnectedNets.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -360,8 +360,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.99984006821 8.99984006821\n",
-      "-882.0\n"
+      "Testing svm_loss:\n",
+      "loss:  9.00196179009\n",
+      "dx error:  1.40215660067e-09\n",
+      "\n",
+      "Testing softmax_loss:\n",
+      "loss:  2.30278175901\n",
+      "dx error:  9.732190083e-09\n"
      ]
     }
    ],
@@ -370,25 +375,25 @@
     "x = 0.001 * np.random.randn(num_inputs, num_classes)\n",
     "y = np.random.randint(num_classes, size=num_inputs)\n",
     "\n",
-    "# dx_num = eval_numerical_gradient(lambda x: svm_loss(x, y)[0], x, verbose=False)\n",
+    "dx_num = eval_numerical_gradient(lambda x: svm_loss(x, y)[0], x, verbose=False)\n",
     "loss, dx = svm_loss(x, y)\n",
-    "loss2, dx2 = svm_loss2(x, y)\n",
-    "print loss, loss2\n",
-    "print np.sum(np.abs(dx) - np.abs(dx2))\n",
+    "# loss2, dx2 = svm_loss2(x, y)\n",
+    "# print loss, loss2\n",
+    "# print np.sum(np.abs(dx) - np.abs(dx2))\n",
     "\n",
     "\n",
-    "# # Test svm_loss function. Loss should be around 9 and dx error should be 1e-9\n",
-    "# print 'Testing svm_loss:'\n",
-    "# print 'loss: ', loss\n",
-    "# print 'dx error: ', rel_error(dx_num, dx)\n",
+    "# Test svm_loss function. Loss should be around 9 and dx error should be 1e-9\n",
+    "print 'Testing svm_loss:'\n",
+    "print 'loss: ', loss\n",
+    "print 'dx error: ', rel_error(dx_num, dx)\n",
     "\n",
-    "# dx_num = eval_numerical_gradient(lambda x: softmax_loss(x, y)[0], x, verbose=False)\n",
-    "# loss, dx = softmax_loss(x, y)\n",
+    "dx_num = eval_numerical_gradient(lambda x: softmax_loss(x, y)[0], x, verbose=False)\n",
+    "loss, dx = softmax_loss(x, y)\n",
     "\n",
-    "# # Test softmax_loss function. Loss should be 2.3 and dx error should be 1e-8\n",
-    "# print '\\nTesting softmax_loss:'\n",
-    "# print 'loss: ', loss\n",
-    "# print 'dx error: ', rel_error(dx_num, dx)"
+    "# Test softmax_loss function. Loss should be 2.3 and dx error should be 1e-8\n",
+    "print '\\nTesting softmax_loss:'\n",
+    "print 'loss: ', loss\n",
+    "print 'dx error: ', rel_error(dx_num, dx)"
    ]
   },
   {
