--- a/cs231-psets/pset2/FullyConnectedNets.ipynb
+++ b/cs231-psets/pset2/FullyConnectedNets.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -183,9 +183,9 @@
       "dw shape: (6, 5) w shape: (6, 5)\n",
       "db shape: (5,) b shape: (5,)\n",
       "Testing affine_backward function:\n",
-      "dx error:  2.92811041032e-10\n",
-      "dw error:  7.72230354962e-11\n",
-      "db error:  1.45272151192e-11\n"
+      "dx error:  8.75312951021e-11\n",
+      "dw error:  2.77479215788e-09\n",
+      "db error:  3.49013025058e-11\n"
      ]
     }
    ],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
      "output_type": "stream",
      "text": [
       "Testing relu_backward function:\n",
-      "dx error:  3.27562091007e-12\n"
+      "dx error:  3.27562799025e-12\n"
      ]
     }
    ],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -311,9 +311,9 @@
      "output_type": "stream",
      "text": [
       "Testing affine_relu_forward:\n",
-      "dx error:  4.48032054675e-11\n",
-      "dw error:  8.29296692956e-10\n",
-      "db error:  7.82666949237e-12\n"
+      "dx error:  1.46187336391e-10\n",
+      "dw error:  8.28712165836e-09\n",
+      "db error:  4.68749853136e-11\n"
      ]
     }
    ],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -360,12 +360,12 @@
      "output_type": "stream",
      "text": [
       "Testing svm_loss:\n",
-      "loss:  9.00196179009\n",
+      "loss:  9.00057799852\n",
       "dx error:  1.40215660067e-09\n",
       "\n",
       "Testing softmax_loss:\n",
-      "loss:  2.30278175901\n",
-      "dx error:  9.732190083e-09\n"
+      "loss:  2.30264341325\n",
+      "dx error:  7.92231506081e-09\n"
      ]
     }
    ],
@@ -407,25 +407,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing initialization ... \n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'W1'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m----------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-f075997eb4b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'Testing initialization ... '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mW1_std\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'W1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mb1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'b1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mW2_std\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'W2'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'W1'"
+      "Testing initialization ... \n",
+      "Testing test-time forward pass ... \n",
+      "Testing training loss (no regularization)\n",
+      "Running numeric gradient check with reg =  0.0\n",
+      "W1 relative error: 2.13e-08\n",
+      "W2 relative error: 3.31e-10\n",
+      "b1 relative error: 8.37e-09\n",
+      "b2 relative error: 2.53e-10\n",
+      "Running numeric gradient check with reg =  0.7\n",
+      "W1 relative error: 2.53e-07\n",
+      "W2 relative error: 2.85e-08\n",
+      "b1 relative error: 1.56e-08\n",
+      "b2 relative error: 9.09e-10\n"
      ]
     }
    ],
@@ -497,16 +498,65 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Iteration 1 / 4900) loss: 2.348243\n",
+      "(Epoch 0 / 10) train acc: 0.151000; val_acc: 0.176000\n",
+      "(Iteration 101 / 4900) loss: 1.935606\n",
+      "(Iteration 201 / 4900) loss: 1.738956\n",
+      "(Iteration 301 / 4900) loss: 1.752466\n",
+      "(Iteration 401 / 4900) loss: 1.518155\n",
+      "(Epoch 1 / 10) train acc: 0.452000; val_acc: 0.455000\n",
+      "(Iteration 501 / 4900) loss: 1.544404\n",
+      "(Iteration 601 / 4900) loss: 1.729041\n",
+      "(Iteration 701 / 4900) loss: 1.468784\n",
+      "(Iteration 801 / 4900) loss: 1.518385\n",
+      "(Iteration 901 / 4900) loss: 1.596196\n",
+      "(Epoch 2 / 10) train acc: 0.468000; val_acc: 0.465000\n",
+      "(Iteration 1001 / 4900) loss: 1.603010\n",
+      "(Iteration 1101 / 4900) loss: 1.511131\n",
+      "(Iteration 1201 / 4900) loss: 1.390768\n",
+      "(Iteration 1301 / 4900) loss: 1.416758\n",
+      "(Iteration 1401 / 4900) loss: 1.469447\n",
+      "(Epoch 3 / 10) train acc: 0.469000; val_acc: 0.465000\n",
+      "(Iteration 1501 / 4900) loss: 1.494585\n",
+      "(Iteration 1601 / 4900) loss: 1.528552\n",
+      "(Iteration 1701 / 4900) loss: 1.475370\n",
+      "(Iteration 1801 / 4900) loss: 1.351970\n",
+      "(Iteration 1901 / 4900) loss: 1.446044\n",
+      "(Epoch 4 / 10) train acc: 0.500000; val_acc: 0.486000\n",
+      "(Iteration 2001 / 4900) loss: 1.445344\n",
+      "(Iteration 2101 / 4900) loss: 1.516174\n",
+      "(Iteration 2201 / 4900) loss: 1.345852\n",
+      "(Iteration 2301 / 4900) loss: 1.404518\n",
+      "(Iteration 2401 / 4900) loss: 1.327759\n",
+      "(Epoch 5 / 10) train acc: 0.532000; val_acc: 0.482000\n",
+      "(Iteration 2501 / 4900) loss: 1.344892\n",
+      "(Iteration 2601 / 4900) loss: 1.278614\n",
+      "(Iteration 2701 / 4900) loss: 1.325554\n",
+      "(Iteration 2801 / 4900) loss: 1.469198\n",
+      "(Iteration 2901 / 4900) loss: 1.504363\n",
+      "(Epoch 6 / 10) train acc: 0.540000; val_acc: 0.507000\n",
+      "(Iteration 3001 / 4900) loss: 1.516203\n",
+      "(Iteration 3101 / 4900) loss: 1.432121\n",
+      "(Iteration 3201 / 4900) loss: 1.378774\n",
+      "(Iteration 3301 / 4900) loss: 1.567494\n"
+     ]
+    }
+   ],
    "source": [
-    "model = TwoLayerNet()\n",
-    "solver = None\n",
+    "model = TwoLayerNet(reg=.3)\n",
+    "solver = Solver(model, data, optim_config={'learning_rate': 1e-3}, \n",
+    "                lr_decay=0.95, print_every=100)\n",
     "\n",
     "##############################################################################\n",
     "# TODO: Use a Solver instance to train a TwoLayerNet that achieves at least  #\n",
     "# 50% accuracy on the validation set.                                        #\n",
     "##############################################################################\n",
-    "pass\n",
+    "solver.train()\n",
     "##############################################################################\n",
     "#                             END OF YOUR CODE                               #\n",
     "##############################################################################"
