done with multilayer network

--- a/cs231-psets/pset2/FullyConnectedNets.ipynb
+++ b/cs231-psets/pset2/FullyConnectedNets.ipynb
@@ -646,9 +646,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running check with reg =  0\n",
+      "Initial loss:  2.30237700411\n",
+      "W1 relative error: 3.89e-07\n",
+      "W2 relative error: 8.21e-07\n",
+      "W3 relative error: 1.37e-06\n",
+      "b1 relative error: 1.69e-08\n",
+      "b2 relative error: 2.13e-09\n",
+      "Running check with reg =  3.14\n",
+      "Initial loss:  6.83159376439\n",
+      "W1 relative error: 7.40e-08\n",
+      "W2 relative error: 3.04e-08\n",
+      "W3 relative error: 1.14e-07\n",
+      "b1 relative error: 9.38e-08\n",
+      "b2 relative error: 7.71e-08\n"
+     ]
+    }
+   ],
    "source": [
     "N, D, H1, H2, C = 2, 15, 20, 30, 10\n",
     "X = np.random.randn(N, D)\n",
@@ -677,11 +698,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Iteration 1 / 40) loss: 2.401171\n",
+      "(Epoch 0 / 20) train acc: 0.280000; val_acc: 0.130000\n",
+      "(Epoch 1 / 20) train acc: 0.320000; val_acc: 0.150000\n",
+      "(Epoch 2 / 20) train acc: 0.440000; val_acc: 0.170000\n",
+      "(Epoch 3 / 20) train acc: 0.460000; val_acc: 0.139000\n",
+      "(Epoch 4 / 20) train acc: 0.560000; val_acc: 0.159000\n",
+      "(Epoch 5 / 20) train acc: 0.600000; val_acc: 0.161000\n",
+      "(Iteration 11 / 40) loss: 1.369879\n",
+      "(Epoch 6 / 20) train acc: 0.780000; val_acc: 0.191000\n",
+      "(Epoch 7 / 20) train acc: 0.740000; val_acc: 0.182000\n",
+      "(Epoch 8 / 20) train acc: 0.900000; val_acc: 0.180000\n",
+      "(Epoch 9 / 20) train acc: 0.900000; val_acc: 0.192000\n",
+      "(Epoch 10 / 20) train acc: 0.840000; val_acc: 0.202000\n",
+      "(Iteration 21 / 40) loss: 0.622083\n",
+      "(Epoch 11 / 20) train acc: 0.900000; val_acc: 0.190000\n",
+      "(Epoch 12 / 20) train acc: 0.940000; val_acc: 0.177000\n",
+      "(Epoch 13 / 20) train acc: 1.000000; val_acc: 0.212000\n",
+      "(Epoch 14 / 20) train acc: 0.980000; val_acc: 0.208000\n",
+      "(Epoch 15 / 20) train acc: 0.980000; val_acc: 0.214000\n",
+      "(Iteration 31 / 40) loss: 0.114070\n",
+      "(Epoch 16 / 20) train acc: 1.000000; val_acc: 0.197000\n",
+      "(Epoch 17 / 20) train acc: 0.980000; val_acc: 0.202000\n",
+      "(Epoch 18 / 20) train acc: 0.980000; val_acc: 0.202000\n",
+      "(Epoch 19 / 20) train acc: 0.980000; val_acc: 0.198000\n",
+      "(Epoch 20 / 20) train acc: 0.980000; val_acc: 0.193000\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAmQAAAHwCAYAAAAIDnN0AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3X90pFd93/H3N1oFpgGiBG8IK9uYJI7AxMGCDT9qkrq0\nRZhSUFxaICWQlNRJTmiShop6aX7SpHaiBkqAkrhAgYQAOaAIpzFVKSbhR8uPtWUQxlHrAKk9a2DB\nkY3DFNbi2z/mkZFkSTua1TN3frxf5+ho5s4zM9+9fs7ux/fe5z6RmUiSJKmcbypdgCRJ0qgzkEmS\nJBVmIJMkSSrMQCZJklSYgUySJKkwA5kkSVJhBjJJtYuIsYi4OyLOPchju6jj1yPijQf9ubt819+P\niM/u8frrIuKlvahFUv87VLoASf0nIu7e9PRvAV8F1qvnP5mZb9nP52XmOvCAgz52kGXmT3RyXETc\nBjwvM/+s3ooklWQgk3QfmXlvIKpGeX4iM//HbsdHxKHMvKcXtalz/neRBodTlpL2rZr6e3tEvDUi\nvgw8LyKeGBEfjoi1iLg9In4nIsar4w9FREbEedXzP6hef3dEfDki/ldEPHy/x1avXxoR/zsi7oyI\nV0XEhyLixzr8c/xwRNxU1XxdRExteu2lEXEiIu6KiL+IiEuq9idExA1V++cjYv403/GSiDhZfdbz\nN7X/QUT8avX4OyLi2qqOOyLi/VX7W4EjwLuradxf6KDu2yJiLiJWgL+JiGMR8fZtNf2niPjtTvpI\nUm8YyCR164eBPwS+FXg7cA/wc8BZwMXAU4Gf3OP9PwL8EvDtwP8F/t1+j42I7wD+CJirvvczwOM6\nKT4iHgn8PvAvgcPA/wCuiYjxiHhUVftjMvNBwKXV9wK8Cpiv2r8HeMceX3M20KAdqn4KeG1EPGiH\n4+aAT1d1fCfwiwCZ+VzgBHBpZj4gM1++V92bPu85Vc0T1bH/cON7I+KbgWcDb+6knyT1hoFMUrc+\nmJl/kplfz8xWZn4sMz+Smfdk5qeBq4G/s8f735GZxzPzFPAW4KIujn06cGNmvqt67RXAFzus/znA\nNZl5XfXeq2iHy8fTDpf3Bx5VTft9pvozAZwCzo+IB2fmlzPzI3t8x/8Dfj0zT2XmNbTX4n3vDsed\noh3azs3Mr2Xm+7use8MrM/O26r/LbcD/Av5x9drTgGZmfnyP75DUYwYySd26dfOTiHhERPxpRHwu\nIu4CXkZ71Go3n9v0+CvsvZB/t2OPbK4jMxO4rYPaN977V5ve+/XqvZOZuQq8mPaf4QvV1Ox3Vof+\nOHABsBoRH42Ip+3xHV+sLlLYqfbNrqpqeW9E/GVEzHVT96Zjbt32njcBz6seP4/2qJmkPmIgk9St\n3Pb894BPAt9TTef9MhA113A77WlBACIi2BpM9nICeNim935T9VlNgMz8g8y8GHg4MAZcWbWvZuZz\ngO8Afht4Z0Tc/0z+EJl5V2b+q8w8D5gF/k1EbIwubu/nPeve5T0LwGOrqdhLaY8ySuojBjJJB+WB\nwJ20F5I/kr3Xjx2U/wo8JiL+UUQcor2G7XCH7/0j4BkRcUm1/moO+DLwkYh4ZET83Yi4H9Cqfr4O\nEBE/GhFnVSNTd9IOP18/kz9EVf93V4HyTtpbjGx85ueB7+qk7t0+PzO/Avwx8FbgQ5l54kzqlXTw\nDGSSDsqLgRfQDge/R3uhf60y8/O0F6i/HPgS8N3AMu21Wqd77020630tcJL2RQjPqNZl3Q/4Ldrr\n0T4HfBvwb6u3Pg24ubq69D8Az87Mr53hH2UKuA64G/gQ7TVgH6he+/fAr1VXVP78aerey5uAC3G6\nUupL0V5yIUmDLyLGaE/pPWtToBEQEd8FfAJ4SGb+Tel6JG3lCJmkgRYRT42IiWp68ZdoX7H40cJl\n9ZVqndkvAH9oGJP6kzv1Sxp0T6K9H9oh4CbghzPztFOWoyIivpX2gv/PAjNlq5G0G6csJUmSCnPK\nUpIkqTADmSRJUmG1rSGLiHNo3yvtIbT36bk6M1+57ZhLgHfRvv8cwEJmvmyvzz3rrLPyvPPOO/B6\nJUmSDtr111//xcw87f6IdS7qvwd4cWbeEBEPBK6PiPdk5qe2HfeBzHx6px963nnncfz48QMtVJIk\nqQ4R8VenP6rGKcvMvD0zb6gefxm4mc5vaSJJkjQyerKGLCLOA6bZ+dYeT4yIj0fEu6v7rO30/ssj\n4nhEHD958mSNlUqSJPVe7YEsIh4AvBP4+cy8a9vLNwAPy8xHA68CFnf6jMy8OjOPZubRw4c7vU2d\nJEnSYKg1kFU3vn0n8JbMXNj+embelZl3V4+vBcYj4qw6a5IkSeo3tQWyiAjg9cDNmfnyXY75zuo4\nIuJxVT1fqqsmSZKkflTnVZYXAz8KrETEjVXbS4FzATLzd4FnAT8dEfcALeA56a0DJEnSiKktkGXm\nB4E4zTGvBl5dVw2SJEmDwJ36JUmSCjOQSZIkFWYgkyRJKsxAJkmSVJiBTJIkqTADmSRJUmEGMkmS\npMIMZJIkSYXVuVP/QFpcbjK/tMqJtRZHJhrMzUwxOz1ZuixJkjTEDGSbLC43ObawQuvUOgDNtRbH\nFlYADGWSJKk2TlluMr+0em8Y29A6tc780mqhiiRJ0igwkG1yYq21r3ZJkqSDYCDb5MhEY1/tkiRJ\nB8FAtsnczBSN8bEtbY3xMeZmpgpVJEmSRoGL+jfZWLjvVZaSJKmXDGTbzE5PGsAkSVJPOWUpSZJU\nmIFMkiSpMAOZJElSYQYySZKkwgxkkiRJhRnIJEmSCjOQSZIkFWYgkyRJKsxAJkmSVJiBTJIkqTAD\nmSRJUmEGMkmSpMIMZJIkSYUZyCRJkgo7VLqAYbC43GR+aZUTay2OTDSYm5lidnqydFmSJGlAGMjO\n0OJyk2MLK7ROrQPQXGtxbGEFwFAmSZI64pTlGZpfWr03jG1onVpnfmm1UEWSJGnQGMjO0Im11r7a\nJUmStjOQnaEjE419tUuSJG1nIDtDczNTNMbHtrQ1xseYm5kqVJEkSRo0Luo/QxsL973KUpIkdctA\ndgBmpycNYJIkqWtOWUqSJBVmIJMkSSrMQCZJklSYgUySJKkwA5kkSVJhBjJJkqTCDGSSJEmFGcgk\nSZIKM5BJkiQVZiCTJEkqzEAmSZJUmIFMkiSpMAOZJElSYQYySZKkwgxkkiRJhR0qXcCoWlxuMr+0\nyom1FkcmGszNTDE7PVm6LEmSVICBrIDF5SbHFlZonVoHoLnW4tjCCoChTJKkEeSUZQHzS6v3hrEN\nrVPrzC+tFqpIkiSVZCAr4MRaa1/tkiRpuBnICjgy0dhXuyRJGm4GsgLmZqZojI9taWuMjzE3M1Wo\nIkmSVJKL+gvYWLjvVZaSJAkMZMXMTk8awCRJEuCUpSRJUnEGMkmSpMIMZJIkSYUZyCRJkgozkEmS\nJBVmIJMkSSrMQCZJklSYgUySJKkwA5kkSVJhBjJJkqTCDGSSJEmFGcgkSZIKM5BJkiQVVlsgi4hz\nIuJ9EfGpiLgpIn5uh2MiIn4nIm6JiE9ExGPqqkeSJKlfHarxs+8BXpyZN0TEA4HrI+I9mfmpTcdc\nCpxf/TweeG31W5IkaWTUNkKWmbdn5g3V4y8DNwOT2w57JvDmbPswMBERD62rJkmSpH7UkzVkEXEe\nMA18ZNtLk8Ctm57fxn1DGxFxeUQcj4jjJ0+erKtMSZKkImoPZBHxAOCdwM9n5l3dfEZmXp2ZRzPz\n6OHDhw+2QEmSpMJqDWQRMU47jL0lMxd2OKQJnLPp+dlVmyRJ0sio8yrLAF4P3JyZL9/lsGuA51dX\nWz4BuDMzb6+rJkmSpH5U51WWFwM/CqxExI1V20uBcwEy83eBa4GnAbcAXwF+vMZ6Bt7icpP5pVVO\nrLU4MtFgbmaK2en7LLmTJEkDprZAlpkfBOI0xyTwM3XVMEwWl5scW1ihdWodgOZai2MLKwCGMkmS\nBpw79Q+I+aXVe8PYhtapdeaXVgtVJEmSDoqBbECcWGvtq12SJA0OA9mAODLR2Fe7JEkaHAayATE3\nM0VjfGxLW2N8jLmZqUIVSZKkg1LnVZY6QBsL973KUpKk4WMgGyCz05MGMEmShpCBbMi5d5kkSf3P\nQDbE3LtMkqTB4KL+IebeZZIkDQYD2RBz7zJJkgaDgWyIuXeZJEmDwUA2xNy7TJKkweCi/iHm3mWS\nJA0GA9mQc+8ySZL6n1OWkiRJhRnIJEmSCjOQSZIkFWYgkyRJKsxAJkmSVJiBTJIkqTADmSRJUmEG\nMkmSpMIMZJIkSYUZyCRJkgozkEmSJBVmIJMkSSrMQCZJklSYgUySJKkwA5kkSVJhBjJJkqTCDGSS\nJEmFGcgkSZIKO1S6AA2HxeUm80urnFhrcWSiwdzMFLPTk6XLkiRpIBjIdMYWl5scW1ihdWodgOZa\ni2MLKwCGMkmSOuCUpc7Y/NLqvWFsQ+vUOvNLq4UqkiRpsBjIdMZOrLX21S5JkrYykOmMHZlo7Ktd\nkiRtZSDTGZubmaIxPralrTE+xtzMVKGKJEkaLC7q1xnbWLjvVZaSJHXHQKYDMTs9aQCTJKlLTllK\nkiQVZiCTJEkqzEAmSZJUmIFMkiSpMAOZJElSYQYySZKkwgxkkiRJhRnIJEmSCjOQSZIkFeZO/bqP\nxeWmt0GSJKmHDGTaYnG5ybGFFVqn1gForrU4trACYCiTJKkmTllqi/ml1XvD2IbWqXXml1YLVSRJ\n0vAzkGmLE2utfbVLkqQzZyDTFkcmGvtqlyRJZ85Api3mZqZojI9taWuMjzE3M1WoIkmShp+L+rXF\nxsJ9r7KUJKl3DGS6j9npSQOYJEk95JSlJElSYQYySZKkwgxkkiRJhRnIJEmSCjOQSZIkFWYgkyRJ\nKsxAJkmSVJiBTJIkqTADmSRJUmEGMkmSpMIMZJIkSYUZyCRJkgozkEmSJBVmIJMkSSrMQCZJklSY\ngUySJKkwA5kkSVJhh+r64Ih4A/B04AuZ+X07vH4J8C7gM1XTQma+rK561H8Wl5vML61yYq3FkYkG\nczNTzE5Pli5LkqSeqy2QAW8EXg28eY9jPpCZT6+xBvWpxeUmxxZWaJ1aB6C51uLYwgqAoUySNHJq\nm7LMzPcDd9T1+Rps80ur94axDa1T68wvrRaqSJKkckqvIXtiRHw8It4dEY8qXIt66MRaa1/tkiQN\ns5KB7AbgYZn5aOBVwOJuB0bE5RFxPCKOnzx5smcFqj5HJhr7apckaZgVC2SZeVdm3l09vhYYj4iz\ndjn26sw8mplHDx8+3NM6VY+5mSka42Nb2hrjY8zNTBWqSJKkcupc1L+niPhO4POZmRHxONrh8Eul\n6lFvbSzc9ypLSZLq3fbircAlwFkRcRvwK8A4QGb+LvAs4Kcj4h6gBTwnM7OuetR/ZqcnDWCSJFFj\nIMvM557m9VfT3hZDkiRppJW+ylKSJGnkGcgkSZIKM5BJkiQVZiCTJEkqzEAmSZJUmIFMkiSpMAOZ\nJElSYQYySZKkwgxkkiRJhRnIJEmSCjOQSZIkFbavQBZt31JXMZIkSaPotIEsIt4cEQ+KiL8FrAC3\nRMQv1F+aJEnSaOhkhOz7M/MuYBZ4D/Aw4MfqLEoqbXG5ycVXXcfDr/hTLr7qOhaXm6VLkiQNsUMd\nHDMeEYeAZwKvzcyvRcTXa65LKmZxucmxhRVap9YBaK61OLawAsDs9GTJ0iRJQ6qTEbLXAf8X+Dbg\nzyPiXODuWquSDtB+R7vml1bvDWMbWqfWmV9arbNMSdIIO+0IWWa+AnjFxvOIuBV4cp1FSQelm9Gu\nE2utfbVLknSmOlnU/6KIeFD1+PeAjwA/WHdh0kHoZrTryERjX+2SJJ2pTqYsL8/MuyLiKcBDgH8B\n/Fa9ZUkHo5vRrrmZKRrjY1vaGuNjzM1MHWhtkiRt6CSQZfX7acDvZ+bHO3yfVFw3o12z05NcedmF\nTE40CGByosGVl13ogn5JUm06ucry4xFxLfC9wEsj4gF8I6RJfW1uZmrLGjLobLRrdnrSACZJ6plO\nAtmPA48FbsnMr0TEWcAL6y1LOhgboWp+aZUTay2OTDSYm5kybEmS+konV1muVyHssogA+PPMfHft\nlUkHxNEuSVK/6+Qqy98AXgJ8uvqZi4hfr7swSZKkUdHJlOU/Ah6TmfcARMQbgBuAX6yzMEmSpFHR\n6dWSD9zlsSRJks5QJyNkvwXcEBHvBQK4BPilOouSJEkaJZ0s6v+DiHgf8Piq6Zczc++bAUqSJKlj\nuwayiPj+bU23VL8fHBEPzsxP1FeWJEnS6NhrhOw1e7yWwA8dcC2SJEkjaddAlpneQFySJKkHvCel\nJElSYQYySZKkwgxkkiRJhZ1224sdrrYEuBO4NTO/fvAlSZIkjZZONoZ9PXARcBPtjWEfCXwKeGBE\nXJ6Z762xPkmSpKHXyZTlZ4HHZuZFmflo4LHA/wZmgN+usTZJkqSR0Ekge+TmTWAzcwW4IDNv2eM9\nkiRJ6lAnU5Z/ERGvAt5WPX921XY/4J7aKpMkSRoRnYyQPR+4Dbii+jkBvIB2GPt79ZUmSZI0Gjq5\nufhXgN+sfra788ArkiRJGjGdbHvxBOBXgIdtPj4zv7fGuiRJkkZGJ2vI/gvwEuB6YL3eciRJkkZP\nJ4Hsrsz8k9orkSRJGlGdBLLrIuJKYAH46kbj5q0wJEmS1L1OAtmTtv0GSOCHDr4cSZKk0dPJVZY/\n2ItCJEmSRtWugSwinpuZb42In93p9cz8nfrKkiRJGh17jZB9W/X7cC8KkSRJGlW7BrLM/E/V71/q\nXTmSJEmjp5ONYc8C/jlwHls3hr28vrIkSZJGRydXWb4L+DDwQdwYVpIk6cB1Esi+JTNfXHslUgcW\nl5vML61yYq3FkYkGczNTzE5Pli5LkqQz8k0dHPPuiHhK7ZVIp7G43OTYwgrNtRYJNNdaHFtYYXG5\nWbo0SZLOSCeB7KeA/xYRd0fEHRHx1xFxR92FSdvNL63SOrV11rx1ap35pdVCFQ2OxeUmF191HQ+/\n4k+5+KrrDLGS1Gc6mbI8q/YqpA6cWGvtq11tGyOLG2F2Y2QRcLpXkvrEriNkEXF+9fBRu/xIPXVk\norGvdrU5sihJ/W+vEbIrgBcCr9nhNe9lqZ6bm5naMtID0BgfY25mqmBV/c+RRUnqf3ttDPvC6rf3\nslRf2Jhe8yrL/Tky0aC5Q/hyZFGS+kcna8iIiEcAFwD332jLzD+sqyhpN7PTkwawfXJkUZL6Xyc7\n9f8i8BTgEcASMEN7k1gDmTQAHFmUpP7XyQjZs4GLgBsy80cj4qHAG2utStKBcmRRkvpbJ/uQtTJz\nHbgnIh4IfA54WL1lSZIkjY5ORsiWI2ICeANwHLgL+GitVUmSJI2QPQNZRATwq5m5BrwmIpaAB2Xm\nDT2pTpIkaQTsGcgyMyPiPcD3Vc9v6UlVkiRJI6STNWQ3RsR07ZVIkiSNqF1HyCLiUGbeA0wDH4uI\nvwT+Bgjag2eP6VGNkiRJQ22vKcuPAo8BntGjWqSBtrjcdK8vSVJX9gpkAZCZf9mjWqSBtbjc3LIb\nfnOtxbGFFQBDmSTptPYKZIcj4hd2ezEzX15DPdJAml9a3XJrIoDWqXXml1YNZJKk09orkI0BD6Aa\nKZO0uxM73Lx7r/YNTnNKkmDvQHZ7Zr6sZ5VIA+zIRIPmDuHryERj1/c4zSlJ2rDXtheOjEkdmpuZ\nojE+tqWtMT7G3MzUru/Za5pTkjRa9gpkf+9MPjgi3hARX4iIT+7yekTE70TELRHxiYhwGw0NrNnp\nSa687EImJxoEMDnR4MrLLtxzpKvbaU5J0vDZdcoyM+84w89+I/Bq4M27vH4pcH7183jgtdVvaSDN\nTk/ua6qxm2lOSdJw6mSn/q5k5vuBvULdM4E3Z9uHgYmIeGhd9Uj9pptpTknScNrzXpY1mwRu3fT8\ntqrt9jLlSL21MZrmVZaSpJKBrGMRcTlwOcC5555buBrp4Ox3mlOSNJxqm7LsQBM4Z9Pzs6u2+8jM\nqzPzaGYePXz4cE+KkyRJ6pWSgewa4PnV1ZZPAO7MTKcrJUnSyKltyjIi3gpcApwVEbcBvwKMA2Tm\n7wLXAk8DbgG+Avx4XbVIkiT1s9oCWWY+9zSvJ/AzdX2/JEnSoCg5ZSlJkiQMZJIkScUZyCRJkgoz\nkEmSJBVmIJMkSSrMQCZJklSYgUySJKkwA5kkSVJhBjJJkqTCDGSSJEmFGcgkSZIKM5BJkiQVZiCT\nJEkqzEAmSZJUmIFMkiSpMAOZJElSYQYySZKkwgxkkiRJhRnIJEmSCjOQSZIkFWYgkyRJKsxAJkmS\nVJiBTJIkqTADmSRJUmEGMkmSpMIMZJIkSYUZyCRJkgozkEmSJBVmIJMkSSrMQCZJklSYgUySJKkw\nA5kkSVJhBjJJkqTCDGSSJEmFHSpdgCQNk8XlJvNLq5xYa3FkosHczBSz05Oly5LU5wxkknRAFpeb\nHFtYoXVqHYDmWotjCysAhjJJe3LKUpIOyPzS6r1hbEPr1DrzS6uFKpI0KBwhkwaMU2L968Raa1/t\nkrTBETJpgGxMiTXXWiTfmBJbXG6WLk3AkYnGvtolaYOBTBogTon1t7mZKRrjY1vaGuNjzM1MFapI\n0qBwylIaIE6J9beNqWOnlCXtl4FMGiBHJho0dwhfTon1j9npSQOYpH1zylIaIE6JSdJwcoRMGiBO\niUnScDKQSQPGKTFJGj5OWUqSJBVmIJMkSSrMQCZJklSYgUySJKkwA5kkSVJhBjJJkqTC3PZC0o4W\nl5vudyZJPWIgk3Qfi8tNji2s3Hsj8+Zai2MLKwCGMkmqgVOWku5jfmn13jC2oXVqnfml1UIVSdJw\nc4RM0n2c2OEG5nu1DyunbSX1ioFM0n0cmWjQ3CF8HZloFKjmvnoRlJy2ldRLTllKuo+5mSka42Nb\n2hrjY8zNTBWq6Bs2glJzrUXyjaC0uNw80O9x2lZSLxnIJN3H7PQkV152IZMTDQKYnGhw5WUX9sXI\nUK+CktO2knrJKUtJO5qdnuyLALZdr4JSv0/bShoujpBJGii7BaKDDkr9PG0rafgYyCQNlF4FpX6e\ntpU0fJyylDRQNgJRL7aj6NdpW0nDx0AmaeAYlCQNG6csJUmSCjOQSZIkFWYgkyRJKsxAJkmSVJiB\nTJIkqTADmSRJUmEGMkmSpMIMZJIkSYUZyCRJkgozkEmSJBXmrZMkjYTF5WZP7n8pSd2odYQsIp4a\nEasRcUtEXLHD6z8WEScj4sbq5yfqrEfSaFpcbnJsYYXmWosEmmstji2ssLjcLF2aJAE1BrKIGANe\nA1wKXAA8NyIu2OHQt2fmRdXP6+qqR9Loml9apXVqfUtb69Q680urhSqSpK3qHCF7HHBLZn46M78G\nvA14Zo3fJ0k7OrHW2le7JPVanYFsErh10/Pbqrbt/nFEfCIi3hER59RYj6QRdWSisa92Seq10ldZ\n/glwXmZ+P/Ae4E07HRQRl0fE8Yg4fvLkyZ4WKGnwzc1M0Rgf29LWGB9jbmaqUEWStFWdgawJbB7x\nOrtqu1dmfikzv1o9fR3w2J0+KDOvzsyjmXn08OHDtRQraXjNTk9y5WUXMjnRIIDJiQZXXnahV1lK\n6ht1bnvxMeD8iHg47SD2HOBHNh8QEQ/NzNurp88Abq6xHkkjbHZ60gAmqW/VFsgy856IeBGwBIwB\nb8jMmyLiZcDxzLwG+NmIeAZwD3AH8GN11SOpfu71JUndicwsXcO+HD16NI8fP166DEnbbOz1tXl7\nicb4mFODkkZaRFyfmUdPd1zpRf2ShoR7fUlS9wxkkg6Ee31JUve8l6WkA3FkokFzh/DlXl+n59o7\nSY6QSToQ7vXVHe+zKQkMZJIOiHt9dce1d5LAKUtJB8i9vvbPtXeSwBEySSrK+2xKAgOZJBXl2jtJ\n4JSlJBW1McXrVZbSaDOQSVJhrr2T5JSlJElSYQYySZKkwgxkkiRJhRnIJEmSCjOQSZIkFWYgkyRJ\nKsxAJkmSVJj7kEkqanG56aaokkaegUxSMYvLTY4trNA6tQ5Ac63FsYUVAEOZpJHilKWkYuaXVu8N\nYxtap9aZX1otVJEklWEgk1TMibXWvtolaVgZyCQVc2Sisa92SRpWBjJJxczNTNEYH9vS1hgfY25m\nqlBFklSGi/olFbOxcN+rLCWNOgOZpKJmpycNYJJGnlOWkiRJhRnIJEmSCjOQSZIkFeYaMknSrry1\nldQbBjJJ0o68tZXUO05ZSpJ25K2tpN4xkEmSduStraTeMZBJknbkra2k3jGQSZJ25K2tpN5xUb8k\naUfe2krqHQOZJGlX3tpK6g2nLCVJkgozkEmSJBXmlKUkjQh33Zf6l4FMkkaAu+5L/c0pS0kaAe66\nL/U3A5kkjQB33Zf6m4FMkkaAu+5L/c1AJkkjwF33pf7mon5JGgHuui/1NwOZJI0Id92X+pdTlpIk\nSYUZyCRJkgozkEmSJBVmIJMkSSrMRf2SNIC8L2V37Df1KwOZJA0Y70vZHftN/cwpS0kaMN6Xsjv2\nm/qZgUySBoz3peyO/aZ+ZiCTpAHjfSm7Y7+pnxnIJGnAeF/KtsXlJhdfdR0Pv+JPufiq61hcbu55\nvP2mfuaifkkaMN6XsrsF+t32m1dmqhciM0vXsC9Hjx7N48ePly5DklTQxVddR3OHtV+TEw0+dMWT\nD+x7tgc/aI+qXXnZhYYydSQirs/Mo6c7zilLSdLA6dUCfa/MVK8YyCRJA6dXC/S9MlO94hoySdLA\nmZuZ2nEq8aAX6B+ZaOw4NXq64NfNujPXqvVOP/a1gUySNHB6dWFDN8GvmwsOvItA9/Ybrvq1r13U\nL0k6UP04+nAm9vvn6eaCg15dpDBsurnootd93emifkfIJEkHptvRh34OcbPTk/uqpZt1Z65V685e\nF13s9t+sX/vaRf2SpAPTzVWJGyGuudYi+UaIO91Gr/2qmwsOvItAd7oJV/3a1wYySdKB6eYfyGHb\nWqKbOwL08i4C+73DQT/rJlz16x0bDGSSpAPTzT+Q/TqF1K3Z6UmuvOxCJicaBO21SafbSLab93Rj\n2EYjuwmv+N4oAAAJE0lEQVRXverr/XJRvyTpwAzCIutR1m1f9/Mav36uDVzUL0kqoJvtKHq1p5i6\nG43s120iNuz3oot+ZSCTJB2o/f4D6c3Su7ff0aFuNrrt5kpG7Z+BTJJU3LCMcvRSNyNX3YxG9nKN\nX79PP9bJQCZJ0gDqZuSqm9HIXt0+qt+nRutmIJMkaQB1O3K139HIXt0+atSnRt32QpKkAdSrDU67\n2Saim73lhm37k/2qdYQsIp4KvBIYA16XmVdte/1+wJuBxwJfAp6dmZ+tsyZJkoZBL69O7cXto7qd\nGh0WtY2QRcQY8BrgUuAC4LkRccG2w14I/HVmfg/wCuA366pHkqRh0q8bnMJw7aDfK3WOkD0OuCUz\nPw0QEW8Dngl8atMxzwR+tXr8DuDVERE5aLvVSpJUQL9endrN6N2ob39SZyCbBG7d9Pw24PG7HZOZ\n90TEncCDgS/WWJckSapRt+GqXwNmLwzEVZYRcTlwOcC5555buBpJknQ6oxyuulHnVZZN4JxNz8+u\n2nY8JiIOAd9Ke3H/Fpl5dWYezcyjhw8frqlcSZKkMuoMZB8Dzo+Ih0fENwPPAa7Zdsw1wAuqx88C\nrnP9mCRJGjW1TVlWa8JeBCzR3vbiDZl5U0S8DDiemdcArwd+PyJuAe6gHdokSZJGSq1ryDLzWuDa\nbW2/vOnx/wP+SZ01SJIk9Tt36pckSSrMQCZJklSYgUySJKkwA5kkSVJhBjJJkqTCDGSSJEmFGcgk\nSZIKM5BJkiQVZiCTJEkqzEAmSZJUmIFMkiSpsMjM0jXsS0ScBP6qB191FvDFHnxPP7MP7AOwD8A+\nAPsA7AOwD2D/ffCwzDx8uoMGLpD1SkQcz8yjpesoyT6wD8A+APsA7AOwD8A+gPr6wClLSZKkwgxk\nkiRJhRnIdnd16QL6gH1gH4B9APYB2AdgH4B9ADX1gWvIJEmSCnOETJIkqTAD2TYR8dSIWI2IWyLi\nitL1lBARn42IlYi4MSKOl66nFyLiDRHxhYj45Ka2b4+I90TE/6l+f1vJGuu2Sx/8akQ0q3Phxoh4\nWska6xYR50TE+yLiUxFxU0T8XNU+MufCHn0wMudCRNw/Ij4aER+v+uDXqvaHR8RHqn8f3h4R31y6\n1rrs0QdvjIjPbDoPLipda90iYiwiliPiv1bPazkPDGSbRMQY8BrgUuAC4LkRcUHZqor5u5l50Qhd\n3vxG4Knb2q4A3puZ5wPvrZ4Pszdy3z4AeEV1LlyUmdf2uKZeuwd4cWZeADwB+Jnq74BROhd26wMY\nnXPhq8CTM/PRwEXAUyPiCcBv0u6D7wH+GnhhwRrrtlsfAMxtOg9uLFdiz/wccPOm57WcBwayrR4H\n3JKZn87MrwFvA55ZuCb1QGa+H7hjW/MzgTdVj98EzPa0qB7bpQ9GSmbenpk3VI+/TPsv4UlG6FzY\now9GRrbdXT0dr34SeDLwjqp92M+D3fpgpETE2cA/BF5XPQ9qOg8MZFtNArduen4bI/YXUSWB/x4R\n10fE5aWLKeghmXl79fhzwENKFlPQiyLiE9WU5tBO1W0XEecB08BHGNFzYVsfwAidC9U01Y3AF4D3\nAH8JrGXmPdUhQ//vw/Y+yMyN8+A3qvPgFRFxv4Il9sJ/BF4CfL16/mBqOg8MZNrJkzLzMbSnbn8m\nIn6odEGlZfty5JH7v0PgtcB3056yuB347bLl9EZEPAB4J/DzmXnX5tdG5VzYoQ9G6lzIzPXMvAg4\nm/bsySMKl9Rz2/sgIr4POEa7L34A+Hbg3xQssVYR8XTgC5l5fS++z0C2VRM4Z9Pzs6u2kZKZzer3\nF4A/pv2X0Sj6fEQ8FKD6/YXC9fRcZn6++kv568B/ZgTOhYgYpx1E3pKZC1XzSJ0LO/XBKJ4LAJm5\nBrwPeCIwERGHqpdG5t+HTX3w1GpKOzPzq8B/YbjPg4uBZ0TEZ2kvYXoy8EpqOg8MZFt9DDi/uoLi\nm4HnANcUrqmnIuJbIuKBG4+BpwCf3PtdQ+sa4AXV4xcA7ypYSxEbIaTywwz5uVCtD3k9cHNmvnzT\nSyNzLuzWB6N0LkTE4YiYqB43gH9Aey3d+4BnVYcN+3mwUx/8xab/MQnaa6eG9jzIzGOZeXZmnkc7\nD1yXmf+Mms4DN4bdprqU+z8CY8AbMvM3CpfUUxHxXbRHxQAOAX84Cn0QEW8FLgHOAj4P/AqwCPwR\ncC7wV8A/zcyhXfS+Sx9cQnuKKoHPAj+5aS3V0ImIJwEfAFb4xpqRl9JeQzUS58IeffBcRuRciIjv\np71Ye4z2wMUfZebLqr8f30Z7qm4ZeF41UjR09uiD64DDQAA3Aj+1afH/0IqIS4B/nZlPr+s8MJBJ\nkiQV5pSlJElSYQYySZKkwgxkkiRJhRnIJEmSCjOQSZIkFWYgkzSQIuLu6vd5EfEjB/zZL932/H8e\n5OdL0nYGMkmD7jxgX4Fs0y7bu9kSyDLzb++zJknaFwOZpEF3FfCDEXFjRPyr6obI8xHxseoGyD8J\n7Y0dI+IDEXEN8KmqbTEiro+ImyLi8qrtKqBRfd5bqraN0bioPvuTEbESEc/e9Nl/FhHviIi/iIi3\nVDuZS1JHTvd/iZLU766g2kEboApWd2bmD0TE/YAPRcR/r459DPB9mfmZ6vk/z8w7qlvDfCwi3pmZ\nV0TEi6qbKm93Ge3d6h9N+44GH4uI91evTQOPAk4AH6J9H7wPHvwfV9IwcoRM0rB5CvD8iLiR9i2P\nHgycX7320U1hDOBnI+LjwIeBczYdt5snAW+tbrL9eeDPgR/Y9Nm3VTffvpH2VKokdcQRMknDJoB/\nmZlLWxrb96L7m23P/z7wxMz8SkT8GXD/M/jezfeyW8e/XyXtgyNkkgbdl4EHbnq+BPx0RIwDRMT3\nRsS37PC+bwX+ugpjjwCesOm1Uxvv3+YDwLOrdWqHgR8CPnogfwpJI83/g5M06D4BrFdTj28EXkl7\nuvCGamH9SWB2h/f9N+CnIuJmYJX2tOWGq4FPRMQNmfnPNrX/MfBE4ONAAi/JzM9VgU6SuhaZWboG\nSZKkkeaUpSRJUmEGMkmSpMIMZJIkSYUZyCRJkgozkEmSJBVmIJMkSSrMQCZJklSYgUySJKmw/w96\nubhItYhCkwAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x119f61e10>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# TODO: Use a three-layer Net to overfit 50 training examples.\n",
     "\n",
@@ -694,7 +757,7 @@
     "}\n",
     "\n",
     "weight_scale = 1e-2\n",
-    "learning_rate = 1e-4\n",
+    "learning_rate = 1e-2\n",
     "model = FullyConnectedNet([100, 100],\n",
     "              weight_scale=weight_scale, dtype=np.float64)\n",
     "solver = Solver(model, small_data,\n",
