--- a/cs231-psets/pset2/FullyConnectedNets.ipynb
+++ b/cs231-psets/pset2/FullyConnectedNets.ipynb
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,6 @@
      "text": [
       "Testing initialization ... \n",
       "Testing test-time forward pass ... \n",
-      "Testing training loss (no regularization)\n",
       "Running numeric gradient check with reg =  0.0\n",
       "W1 relative error: 2.13e-08\n",
       "W2 relative error: 3.31e-10\n",
@@ -472,7 +471,7 @@
       "b2 relative error: 2.53e-10\n",
       "Running numeric gradient check with reg =  0.7\n",
       "W1 relative error: 2.53e-07\n",
-      "W2 relative error: 2.85e-08\n",
+      "W2 relative error: 1.37e-07\n",
       "b1 relative error: 1.56e-08\n",
       "b2 relative error: 9.09e-10\n"
      ]
@@ -510,7 +509,7 @@
     "scores_diff = np.abs(scores - correct_scores).sum()\n",
     "assert scores_diff < 1e-6, 'Problem with test-time forward pass'\n",
     "\n",
-    "print 'Testing training loss (no regularization)'\n",
+    "# print 'Testing training loss (no regularization)'\n",
     "y = np.asarray([0, 5, 1])\n",
     "loss, grads = model.loss(X, y)\n",
     "correct_loss = 3.4702243556\n",
